--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+.bg_video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1000;
+  background-size: cover;
+}
+
 .portaCartao {
   width: 370px;
   height: 500px;
